2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: factorize regex compile

2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: match_host(): use g_ascii_strdown() to
	  convert to lowercase

2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: fix '*' and '?' expansion in
	  match_word()

2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: define a macro to recognize regex
	  metacharacters

2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: match_host(): remove unneeded cast

2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: match_word(): rename "i" local variable
	  to "ret"

2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: match_word(): rename two local
	  variables. Rename r to dst, and w to src, in order to clarify their
	  roles.

2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: match_word(): remove unused assignment

2011-01-07  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c, application-src/amstar.c: Do not call
	  amname_to_dirname.

2011-01-07  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/bsd-security.c: Check input fd is a socket.

2011-01-07  Dustin J. Mitchell <dustin@mozilla.com>
	* common-src/testutils.c: use %ju instead of %lu to print big numbers

2011-01-07  Francis Galiegue <fgaliegue@gmail.com>
	* testutils.c: report time of execution for each test

2011-01-07  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/testutils.c: add -c <count> option to run tests more than
	  once

2011-01-07  Francis Galiegue <fgaliegue@gmail.com>
	* testutils.c: create a run_one_test() function The way to run a test
	  is the same, whether we fork() or not. Make that a function.

2011-01-06  Francis Galiegue <fgaliegue@gmail.com>